force-app/main/default/objects/Subscription_Additional_CC__c/Subscription_Additional_CC__c.object-meta.xml
<CustomObject>
    <label>Subscription Additional CC</label>
    <nameField>
        <displayFormat>SUB-CC{00000}</displayFormat>
        <label>Subscription Additional CC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Additional CCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>