force-app/main/default/objects/Subscription_Additional_CC__c/fields/HL_Contact__c.field-meta.xml
<CustomField>
    <fullName>HL_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HL Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>HL Employees only.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Houlihan_Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Subscription Additional CCs</relationshipLabel>
    <relationshipName>Subscription_Additional_CCs</relationshipName>
    <type>Lookup</type>
</CustomField>