force-app/main/default/objects/Subscription_Additional_CC__c/fields/HL_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>HL_Contact_Name__c</fullName>
    <formula>HL_Contact__r.FirstName &amp; &quot; &quot; &amp;  HL_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HL Contact Name</label>
    <type>Text</type>
</CustomField>