force-app/main/default/objects/Subscription_Additional_CC__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CC</fullName>
                <default>true</default>
                <label>CC</label>
            </value>
            <value>
                <fullName>BCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>